--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ bin
 log4j-1.2.16.jar
 mysql-connector-java-5.1.12-bin.jar
 mysql-connector-java-5.1.13-bin.jar
-config/Datenbank_local.ini
+config/Datenbank.ini
